# event-web-scout

./: .gitignore  README.md  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: ci-cd.yml  ci.yml  publish.yml
docs/adr/: 0001-record-architecture-decisions.md  0002-implement-as-plugin-based-python-system.md  0003-publish-core-and-plugin-examples-as-packages-to-pypi.md
event-web-scout/: config.json  config_schema.json  setup.py
event_web_scout/: __init__.py  config.json  config_example.json  config_schema.json  datetime_utils.py  google_calendar.py  models.py  plugin_base.py  plugin_interface.py  utils.py
plugins/example-plugin/: requirements.txt  setup.cfg
plugins/example-plugin/event_web_scout_plugin_example/: plugin.py
plugins/html-plugin/: requirements.txt  setup.cfg
plugins/html-plugin/event_web_scout_plugin_html/: __init__.py  plugin.py
tests/: config_with_plugin_sleep_time.json  config_with_schema_mismatch.json  invalid_config.json  invalid_config_schema.json  test_config.py  test_example_plugin.py  test_html_plugin.py  test_utils.py
tests/config/: html_plugin_config.json
tests/html/: basic.html
