[metadata]
name = event_web_scout
version = {{VERSION_PLACEHOLDER}}
author = Aleksandr Klimov
author_email = 2767789+geeeezmo@users.noreply.github.com
description = Extendable package for collecting events from the web and adding them to Google calendars
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/geeeezmo/event-web-scout
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Other Audience
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE

[options]
packages = find:
install_requires =
    jsonschema == 4.19.0
    typeguard == 4.1.5
    func-timeout == 4.3.5

[options.packages.find]
include = event_web_scout