[metadata]
name = event_web_scout_plugin_example
version = {{VERSION_PLACEHOLDER}}
author = Aleksandr Klimov
author_email = 2767789+geeeezmo@users.noreply.github.com
description = An example plugin for the extendable package for collecting events from the web and adding them to Google calendars
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/geeeezmo/event-web-scout
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Other Audience
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE

[options]
packages = find:
install_requires =
  event_web_scout == {{VERSION_PLACEHOLDER}}

[options.packages.find]
include = event_web_scout_plugin_example

[options.entry_points]
example_plugins =
  example_plugin = event_web_scout_plugin_example.plugin:Plugin