[metadata]
name = event_web_scout_plugin_html
;todo: put version placeholder here
;version = {{VERSION_PLACEHOLDER}}
version = 0.0.1a24
author = Aleksandr Klimov
author_email = 2767789+geeeezmo@users.noreply.github.com
description = An HTML plugin base for the extendable package for collecting events from the web and adding them to Google calendars
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/geeeezmo/event-web-scout
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Other Audience
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE

[options]
packages = find:
;todo: put version placeholder here
install_requires =
  event_web_scout == 0.0.1a24

[options.packages.find]
include = event_web_scout_plugin_html

[options.entry_points]
core_plugins =
  example_html_plugin = event_web_scout_plugin_html.plugin:ExampleHtmlPlugin